--- a/ionic/package.json
+++ b/ionic/package.json
@@ -24,8 +24,10 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/stripe": "^5.30.0",
     "@ionic/angular": "^5.0.0",
     "animate.css": "^4.1.1",
+    "cordova-plugin-stripe": "^1.5.3",
     "firebase": "^8.2.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
